@@ -40,10 +40,26 @@ PlanIter_t fn_zorba_util_schema_type::codegen(
   return new ZorbaSchemaTypeIterator(sctx, loc, argv);
 }
 
+PlanIter_t fn_zorba_schema_schema_type::codegen(
+  CompilerCB*,
+  static_context* sctx,
+  const QueryLoc& loc,
+  std::vector<PlanIter_t>& argv,
+  AnnotationHolder& ann) const
+{
+  return new ZorbaSchemaTypeIterator(sctx, loc, argv);
+}
+
 void populate_context_schema(static_context* sctx)
 {
   DECL(sctx, fn_zorba_util_schema_type,
       (createQName("http://www.zorba-xquery.com/zorba/util-functions","fn-zorba-util","schema-type"),
+      GENV_TYPESYSTEM.ITEM_TYPE_ONE,
+      GENV_TYPESYSTEM.QNAME_TYPE_ONE));
+
+
+  DECL(sctx, fn_zorba_schema_schema_type,
+      (createQName("http://www.zorba-xquery.com/modules/schema","fn-zorba-schema","schema-type"),
       GENV_TYPESYSTEM.ITEM_TYPE_ONE,
       GENV_TYPESYSTEM.QNAME_TYPE_ONE));
 
