@@ -186,6 +186,7 @@
   FN_ZORBA_UTIL_RANDOM_1,
   FN_ZORBA_UTIL_UUID_0,
   FN_ZORBA_UTIL_SCHEMA_TYPE_1,
+  FN_ZORBA_SCHEMA_SCHEMA_TYPE_1,
   OP_CONCATENATE_N,
   FN_INDEX_OF_2,
   FN_INDEX_OF_3,
