@@ -1,3 +1,2 @@
-import module namespace
-fn-zorba-util="http://www.zorba-xquery.com/zorba/util-functions";
-fn-zorba-util:schema-type(1)
+import module namespace schema ="http://www.zorba-xquery.com/modules/schema";
+schema:schema-type(1)
