@@ -1,3 +1,2 @@
-import module namespace
-fn-zorba-util="http://www.zorba-xquery.com/zorba/util-functions";
-fn:prefix-from-QName(fn-zorba-util:schema-type("test"))
+import module namespace schema = "http://www.zorba-xquery.com/modules/schema";
+fn:prefix-from-QName(schema:schema-type("test"))
